# read-redis

./: README.md
redis-6.0.3/: CmakeLists.txt
redis-6.0.3/debug/: main.c
redis-6.0.3/src/: ae_kqueue.c  sds.c  server.c
redis-debug/: CMakeLists.txt  main.c
redis-doc/: Redis基本数据结构-1.md  Redis基本数据结构-2.md  基本数据结构.md
